Updated MOH 257 and Hiv enrollment

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -166,7 +166,12 @@
 				<tr>
 					<td>Facility where confirmation done</td>
 					<td>
+                        <obsgroup groupingConceptId="161559AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+                            <obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+                        </obsgroup>
+                        <!--
 						<obs conceptId="159936AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
+						-->
 					</td>
 				</tr>
 				<tr>
