--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -167,8 +167,10 @@
 					<td>Facility where confirmation done</td>
 					<td>
                         <obsgroup groupingConceptId="161559AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-                            <obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+                            <obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
                         </obsgroup>
+
+
                         <!--
 						<obs conceptId="159936AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
 						-->
