updated Faces Page

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -251,7 +251,7 @@ jq(function() {
     });
 
 
-    jq('#eallergy input').click( onAllergy);
+    jq('#allergy input').click( onAllergy);
     onAllergy();
 
     getField('date_confirmed_pos.value').change(function(){
