--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -250,10 +250,26 @@ jq(function() {
         }
     });
 
-
-    jq('#allergy input').click(onAllergy);
+    getField('allergy.value').change(onAllergy) ;
+    //jq('#allergy input').click(onAllergy);
     onAllergy();
+    /*
+    getField('allergy.value').change(function(){
+        if(getValue('allergy.value')== ALLERGY_TO_OTHER)
+        {
+            // jq('#allergy_detail').show();
+            jq('#allergy_detail').find('input[type=text]').removeAttr('disabled');
 
+        }
+        else
+        {
+            setValue('allergy_detail.value', '');
+            //jq('#allergy_detail').hide();
+            jq('#allergy_detail').find('input[type=text]').attr('disabled','true');
+
+        }
+    });
+     */
     getField('date_confirmed_pos.value').change(function(){
         var birthDate = new Date(getValue('dob.value'))//.getTime();
         var pos_date=new Date(getValue('date_confirmed_pos.value'))//.getTime();
