dropping all comments

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257ArvTherapy.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257ArvTherapy.html
@@ -388,7 +388,7 @@
 				</tr>
 				<tr>
 					<td>
-						<!-- <obs conceptId="6796" answerConceptId="6795" answerLabel="WHO Stage" style="checkbox"/> -->
+
 						<span id="initialWhoStageAd">WHO Stage<obs id="el_stage_ad" conceptId="160553AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 																						   answerConceptIds="1204AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1205AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1207AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 
@@ -396,19 +396,12 @@
 																						   answerConceptIds="1220AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1221AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1222AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1223AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
 					</td>
 					<td>
-						<!-- <obs conceptId="6796" answerConceptId="6314" answerLabel="CD4 Count" style="checkbox"/> -->
+
 						<span id="cd4_count_val">CD4 Count <obs id="cd_count" conceptId="5497AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="3"/></span>
 					</td>
 					<td>
 						<span id="cd4_percent_val">CD4 %<obs  id="cd_percent" conceptId="730AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  size="3"/></span>
-						<!--
-						<obs conceptId="6796" answerConceptId="6313" answerLabel="CD4%" style="checkbox"/>
-						<obs id="cd4_percent" conceptId="6313" size="3"/>
-						<obs conceptId="6796" answerConceptId="6824" answerLabel="PCR" style="checkbox"/>
-						<obs conceptId="6824" answerConceptIds="664,703" answerLabels="Neg,Pos"/>
-						<obs conceptId="6796" answerConceptId="1359" answerLabel="Research" style="checkbox"/>
-						<obs conceptId="6796" answerConceptId="7105" answerLabel="Option B+" style="checkbox"/>
-						-->
+
 					</td>
 				</tr>
 				<tr>
@@ -478,7 +471,7 @@
 				<tr>
 					<obsgroup groupingConceptId="162241AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 
-						<td style="vertical-align:top;"><obs conceptId="159599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>     <!-- <obs id="sub_fl_date" conceptId="6748" /> -->
+						<td style="vertical-align:top;"><obs conceptId="159599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 						<td style="vertical-align:top;"><obs conceptId="162240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 															 answerConceptIds="792AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,794AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,630AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,84309AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,74807AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,70056AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,80487AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,80586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,75523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,78643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,84795AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,77995AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160104AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160105AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,86663AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,75628AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,79040AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,83412AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,71647AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161361AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,103166AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,104565AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162201AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,817AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162199AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 															 answerLabels="D4T/3TC/NVP,
@@ -510,8 +503,8 @@
 															 ABC/3TC/AZT,
 															 ABC/NVP/3TC,
 															 3TC/ABC/LPV/r"
-								/></td>     <!-- <obs conceptId="6749" /> -->
-						<td>      <!-- Reasons -->
+								/></td>
+						<td>
 							<div style="float: left; padding-right: 20px">
 								<obs conceptId="160562AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="102AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="1-Toxicity" style="checkbox" /> <br/>
 								<obs conceptId="160562AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1434AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="2-Pregnancy" style="checkbox"/><br/>
@@ -536,7 +529,7 @@
 				</tr>
 				<tr>
 					<obsgroup groupingConceptId="162242AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-						<td style="vertical-align:top;"><obs conceptId="159599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>     <!-- <obs id="switch_date" conceptId="6751" /> -->
+						<td style="vertical-align:top;"><obs conceptId="159599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 						<td style="vertical-align:top;"><obs conceptId="162240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 															 answerConceptIds="792AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,794AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,630AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,84309AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,74807AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,70056AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,80487AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,80586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,75523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,78643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,84795AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,77995AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160104AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160105AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,86663AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,75628AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,79040AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,83412AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,71647AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161361AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,103166AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,104565AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162201AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,817AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162199AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 															 answerLabels="D4T/3TC/NVP,
@@ -568,8 +561,8 @@
 															 ABC/3TC/AZT,
 															 ABC/NVP/3TC,
 															 3TC/ABC/LPV/r"
-								/></td>     <!-- <obs conceptId="6782" /> -->
-						<td>      <!-- Reasons -->
+								/></td>
+						<td>
 							<obs conceptId="160568AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="843AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="8-Treatment failure" style="checkbox"/>
 							<obs conceptId="160568AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="160566AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="9-Immunologic failure" style="checkbox"/><br/>
 							<obs conceptId="160568AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="160569AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="10-Virologic failure" style="checkbox"/>
@@ -598,7 +591,7 @@
 							<tr>
 								<td><obs id="date_died" conceptId="1543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/> </td>
 								<td>Patient Died</td>
-								<td>Cause of Death<!-- <obs conceptId="1663" answerConceptIds="86,84,6562,6611,16,6613,507,5041,123,60,43,6612,6610,102,58,1067,1677,1665,1664,5622" answerLabels="Accident motor vehicle, Accident not otherwise specified,Decline to answer,Disease or Illness,Diarrhea,Injury accident or trauma,Kaposi's sarcoma,Lymphoma,Malaria,Meningitis, nos,Pneumonia,Relating to childbirth,Suicide,Toxicity drug,Tuberculosis,Unknown,Other cns disease,Other hiv related illness,Other non hiv related illness,Other"/> --></td>
+								<td></td>
 							</tr>
 						</table>
 					</td>
